--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
         </div>
     </header>
-    <section>
+    <section id="section1">
         <div class="banner-img-div">
             <div class="banner-text-div">
                 <h1 class="banner-main-title">Interior Renovation</h1>
@@ -41,11 +41,32 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="section2">
         <div>
             <h2>​We design beautiful hotels</h2>
+            <div class="service-main-block">
+                <div class="service-div">
+                    <div class="service-icon-div"></div>
+                    <h3>Projects</h3>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
+                <div class="service-div">
+                    <div class="service-icon-div"></div>
+                    <h3>​Great design</h3>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
+                <div class="service-div">
+                    <div class="service-icon-div"></div>
+                    <h3>​Home Decor</h3>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
+                <div class="service-div">
+                    <div class="service-icon-div"></div>
+                    <h3>About Us​​</h3>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
+            </div>
         </div>
     </section>
-    
 </body>
 </html>
