--- a/visual.html
+++ b/visual.html
@@ -27,16 +27,16 @@
                     <li class="nav-li"> 
                         <a id="home-nav" href="index.html">Home
                             <div class="dropdown-content">
-                                <a href="">Interior</a>
-                                <a href="">Services</a>
-                                <a href="">Decoration</a>
+                                <a href="visual.html">Interior</a>
+                                <a href="design.html">Services</a>
+                                <a href="contact.html">Decoration</a>
                             </div>
                         </a> 
                         
                     </li>
                     <li class="nav-li  active-li"> <a href="visual.html">About</a> </li>
-                    <li class="nav-li"> <a href="">Designs</a> </li>
-                    <li class="nav-li"> <a href="">Contact</a> </li>
+                    <li class="nav-li"> <a href="design.html">Designs</a> </li>
+                    <li class="nav-li"> <a href="contact.html">Contact</a> </li>
                 </ul>
             </nav>
             
