--- a/visual.html
+++ b/visual.html
@@ -86,5 +86,43 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-div">
+            <div class="lists">
+                <ul class="ul-list">
+                    <h2 class="title">Products</h2>
+                    <li>Design</li>
+                    <li>Decor</li>
+                    <li>Interior</li>
+                    <li>Exterior</li>
+                </ul>
+                <ul class="ul-list">
+                    <h2 class="title">Products</h2>
+                    <li>Design</li>
+                    <li>Decor</li>
+                    <li>Interior</li>
+                    <li>Exterior</li>
+                </ul>
+                <ul class="ul-list">
+                    <h2 class="title">Products</h2>
+                    <li>Design</li>
+                    <li>Decor</li>
+                    <li>Interior</li>
+                    <li>Exterior</li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="social-icons">
+            <i class="fa-brands fa-facebook icon"></i>
+            <i class="fa-brands fa-twitter icon"></i>
+            <i class="fa-brands fa-linkedin icon"></i>
+            <i class="fa-brands fa-google icon"></i>
+            <i class="fa-brands fa-youtube icon"></i>
+            <i class="fa-solid fa-envelope icon"></i>
+        </div>
+
+
+    </footer>
 </body>
 </html>
