--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,32 @@
         </nav>
       </div>
     </header>
-
-
+    <section class="contacnt-section">
+      <div class="contact-div">
+        <form class="form-style-9">
+          <h2 class="title">Contact Us</h2>
+          <ul>
+              <li>
+                <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
+                <input type="email" name="field2" class="field-style field-split align-right" placeholder="Email" />
+              </li>
+              <li>
+                <input type="text" name="field3" class="field-style field-split align-left" placeholder="Phone" />
+                <input type="url" name="field4" class="field-style field-split align-right" placeholder="Website" />
+              </li>
+              <li>
+                  <input type="text" name="field3" class="field-style field-full align-none" placeholder="Subject" />
+              </li>
+              <li>
+                  <textarea name="field5" class="field-style" placeholder="Message"></textarea>
+              </li>
+              <li>
+                <button>Send</button>
+              </li>
+           </ul>
+         </form>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="footer-div">
@@ -75,8 +99,6 @@
           <i class="fa-brands fa-youtube icon"></i>
           <i class="fa-solid fa-envelope icon"></i>
       </div>
-
-
   </footer>
   </body>
 </html>
