--- a/visual.html
+++ b/visual.html
@@ -19,30 +19,23 @@
 <body>
     <header class="header-block">
         <div class="header-main-div">
-            <div class="header-logo-block">
-                <a class="a-logo" href="">LOGO</a>
-            </div>
-            <nav class="header-nav-block">
-                <ul class="header-ul-block">
-                    <li class="nav-li"> 
-                        <a id="home-nav" href="index.html">Home
-                            <div class="dropdown-content">
-                                <a href="visual.html">Interior</a>
-                                <a href="design.html">Services</a>
-                                <a href="contact.html">Decoration</a>
-                            </div>
-                        </a> 
-                        
-                    </li>
-                    <li class="nav-li  active-li"> <a href="visual.html">About</a> </li>
-                    <li class="nav-li"> <a href="design.html">Designs</a> </li>
-                    <li class="nav-li"> <a href="contact.html">Contact</a> </li>
-                </ul>
-            </nav>
-            
-        </div> 
-
-    </header>
+          <div class="header-logo-block">
+            <a class="a-logo" href="">LOGO</a>
+          </div>
+  
+          <nav class="header-nav-block" id="nav-block">
+            <ul class="header-ul-block">
+              <li class="nav-li ">
+                <a id="home-nav" href="index.html">Home </a>
+              </li>
+              <li class="nav-li active-li"><a href="visual.html">About</a></li>
+              <li class="nav-li"><a href="design.html">Designs</a></li>
+              <li class="nav-li"><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <i id="burger-menu" class="fa-solid fa-bars burger"></i>
+         </div>
+      </header>
 <body>
     <section class="visual-section1">
         <div class="vidual-main-div">
@@ -124,5 +117,6 @@
 
 
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
