--- a/design.html
+++ b/design.html
@@ -23,19 +23,21 @@
     <header class="header-block">
       <div class="header-main-div">
         <div class="header-logo-block">
-          <a class="a-logo" href="index.html">LOGO</a>
+          <a class="a-logo" href="">LOGO</a>
         </div>
-        <nav class="header-nav-block">
+
+        <nav class="header-nav-block" id="nav-block">
           <ul class="header-ul-block">
             <li class="nav-li">
               <a id="home-nav" href="index.html">Home </a>
             </li>
             <li class="nav-li"><a href="visual.html">About</a></li>
-            <li class="nav-li active-li"><a href="design.html">Designs</a></li>
+            <li class="nav-li  active-li"><a href="design.html">Designs</a></li>
             <li class="nav-li"><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
-      </div>
+        <i id="burger-menu" class="fa-solid fa-bars burger"></i>
+       </div>
     </header>
     
     <section class="design-section">
@@ -163,5 +165,6 @@
 
 
   </footer>
+  <script src="index.js"></script>
   </body>
 </html>
