--- a/index.html
+++ b/index.html
@@ -1,136 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GITA-JS</title>
-    <meta name="description" content="Free Web Task">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Laka Nodia">
-    <meta property="og:url" content="img/htmlcss.png"/>
-    <meta property="og:type" content="GITA-JS Project"/>
-    <meta property="og:title" content="GITA-JS"/>
-    <meta property="og:description" content="GITA-JS Project"/>
-    <meta property="og:image" content="img/htmlcss.png"/>
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-</head>
-<body>
+    <meta name="description" content="Free Web Task" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Laka Nodia" />
+    <meta property="og:url" content="img/htmlcss.png" />
+    <meta property="og:type" content="GITA-JS Project" />
+    <meta property="og:title" content="GITA-JS" />
+    <meta property="og:description" content="GITA-JS Project" />
+    <meta property="og:image" content="img/htmlcss.png" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+  </head>
+  <body>
     <header class="header-block">
-        <div class="header-main-div">
-            <div class="header-logo-block">
-                <a class="a-logo" href="">LOGO</a>
-            </div>
-            <nav class="header-nav-block">
-                <ul class="header-ul-block">
-                    <li class="nav-li active-li"> 
-                        <a id="home-nav" href="index.html">Home </a> 
-                    </li>
-                    <li class="nav-li"> <a href="visual.html">About</a> </li>
-                    <li class="nav-li"> <a href="design.html">Designs</a> </li>
-                    <li class="nav-li"> <a href="contact.html">Contact</a> </li>
-                </ul>
-            </nav>
-            
-        </div> 
+      <div class="header-main-div">
+        <div class="header-logo-block">
+          <a class="a-logo" href="">LOGO</a>
+        </div>
 
+        <nav class="header-nav-block" id="nav-block">
+          <ul class="header-ul-block">
+            <li class="nav-li active-li">
+              <a id="home-nav" href="index.html">Home </a>
+            </li>
+            <li class="nav-li"><a href="visual.html">About</a></li>
+            <li class="nav-li"><a href="design.html">Designs</a></li>
+            <li class="nav-li"><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <i id="burger-menu" class="fa-solid fa-bars burger"></i>
+       </div>
     </header>
 
-    
     <section id="section1">
-        <div class="banner-img-div">
-            <div class="banner-text-div">
-                <h1 class="banner-main-title">Interior Renovation</h1>
-                <h2 class="banner-title">​Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</h2>
-                <a href="index.html"><button class="banner-button">Learn More</button></a>
-            </div>
+      <div class="banner-img-div">
+        <div class="banner-text-div">
+          <h1 class="banner-main-title">Interior Renovation</h1>
+          <h2 class="banner-title">
+            ​Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident.
+          </h2>
+          <a href="index.html"
+            ><button class="banner-button">Learn More</button></a
+          >
         </div>
+      </div>
     </section>
     <section id="section2" class="section2">
-        <div class="section2-div">
-            <h2 class="section2-title">​We design beautiful hotels</h2>
-            <div class="service-main-block">
-                <div class="service-div">
-                    <div class="service-icon-div"><i class="fa-solid fa-scroll icon"></i></div>
-                    <h3 class="title-service">Projects</h3>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                </div>
-                <div class="service-div">
-                    <div class="service-icon-div"><i class="fa-sharp fa-solid fa-couch icon"></i></div>
-                    <h3 class="title-service">​Great design</h3>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                </div>
-                <div class="service-div">
-                    <div class="service-icon-div"> <i class="fa-solid fa-tv icon"></i></div>
-                    <h3 class="title-service">​Home Decor</h3>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                </div>
-                <div class="service-div">
-                    <div class="service-icon-div"><i class="fa-solid fa-seedling icon"></i></div>
-                    <h3 class="title-service">About Us​​</h3>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                </div>
+      <div class="section2-div">
+        <h2 class="section2-title">​We design beautiful hotels</h2>
+        <div class="service-main-block">
+          <div class="service-div">
+            <div class="service-icon-div">
+              <i class="fa-solid fa-scroll icon"></i>
             </div>
+            <h3 class="title-service">Projects</h3>
+            <p>
+              Sample text. Click to select the text box. Click again or double
+              click to start editing the text.
+            </p>
+          </div>
+          <div class="service-div">
+            <div class="service-icon-div">
+              <i class="fa-sharp fa-solid fa-couch icon"></i>
+            </div>
+            <h3 class="title-service">​Great design</h3>
+            <p>
+              Sample text. Click to select the text box. Click again or double
+              click to start editing the text.
+            </p>
+          </div>
+          <div class="service-div">
+            <div class="service-icon-div">
+              <i class="fa-solid fa-tv icon"></i>
+            </div>
+            <h3 class="title-service">​Home Decor</h3>
+            <p>
+              Sample text. Click to select the text box. Click again or double
+              click to start editing the text.
+            </p>
+          </div>
+          <div class="service-div">
+            <div class="service-icon-div">
+              <i class="fa-solid fa-seedling icon"></i>
+            </div>
+            <h3 class="title-service">About Us​​</h3>
+            <p>
+              Sample text. Click to select the text box. Click again or double
+              click to start editing the text.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
     <section class="section3">
-        <hr>
-        <div class="section3-main-div">
-            <div class="decoration-div">
-                <h2 class="decor-title">​Decorating Ideas </h2>
-                <h3 class="decor-title2">Images from Freepik</h3>
-                <p class="decor-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="decor-button">Learn More</button>
-            </div>
-            <img class="decor-img1" src="img/decor1.jpg" alt="decor-img">
-            <img class="decor-img3" src="img/decor3.jpg" alt="decor-img">
-            <img class="decor-img2" src="img/decor2.jpg" alt="decor-img">
-            <img class="decor-img4" src="img/decor4.jpg" alt="decor-img">
-            <div class="text-decor-div">
-                <p> ​​Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
+      <hr />
+      <div class="section3-main-div">
+        <div class="decoration-div">
+          <h2 class="decor-title">​Decorating Ideas</h2>
+          <h3 class="decor-title2">Images from Freepik</h3>
+          <p class="decor-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc
+            justo sagittis suscipit ultrices. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.
+          </p>
+          <button class="decor-button">Learn More</button>
         </div>
-
+        <img class="decor-img1" src="img/decor1.jpg" alt="decor-img" />
+        <img class="decor-img3" src="img/decor3.jpg" alt="decor-img" />
+        <img class="decor-img2" src="img/decor2.jpg" alt="decor-img" />
+        <img class="decor-img4" src="img/decor4.jpg" alt="decor-img" />
+        <div class="text-decor-div">
+          <p>
+            ​​Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </div>
     </section>
     <footer class="footer">
-        <div class="footer-div">
-            <div class="lists">
-                <ul class="ul-list">
-                    <h2 class="title">Products</h2>
-                    <li>Design</li>
-                    <li>Decor</li>
-                    <li>Interior</li>
-                    <li>Exterior</li>
-                </ul>
-                <ul class="ul-list">
-                    <h2 class="title">Products</h2>
-                    <li>Design</li>
-                    <li>Decor</li>
-                    <li>Interior</li>
-                    <li>Exterior</li>
-                </ul>
-                <ul class="ul-list">
-                    <h2 class="title">Products</h2>
-                    <li>Design</li>
-                    <li>Decor</li>
-                    <li>Interior</li>
-                    <li>Exterior</li>
-                </ul>
-            </div>
-
+      <div class="footer-div">
+        <div class="lists">
+          <ul class="ul-list">
+            <h2 class="title">Products</h2>
+            <li>Design</li>
+            <li>Decor</li>
+            <li>Interior</li>
+            <li>Exterior</li>
+          </ul>
+          <ul class="ul-list">
+            <h2 class="title">Products</h2>
+            <li>Design</li>
+            <li>Decor</li>
+            <li>Interior</li>
+            <li>Exterior</li>
+          </ul>
+          <ul class="ul-list">
+            <h2 class="title">Products</h2>
+            <li>Design</li>
+            <li>Decor</li>
+            <li>Interior</li>
+            <li>Exterior</li>
+          </ul>
         </div>
-        <div class="social-icons">
-            <i class="fa-brands fa-facebook icon"></i>
-            <i class="fa-brands fa-twitter icon"></i>
-            <i class="fa-brands fa-linkedin icon"></i>
-            <i class="fa-brands fa-google icon"></i>
-            <i class="fa-brands fa-youtube icon"></i>
-            <i class="fa-solid fa-envelope icon"></i>
-        </div>
-
-
+      </div>
+      <div class="social-icons">
+        <i class="fa-brands fa-facebook icon"></i>
+        <i class="fa-brands fa-twitter icon"></i>
+        <i class="fa-brands fa-linkedin icon"></i>
+        <i class="fa-brands fa-google icon"></i>
+        <i class="fa-brands fa-youtube icon"></i>
+        <i class="fa-solid fa-envelope icon"></i>
+      </div>
     </footer>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
