Add api request

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="GITA-JS Project" />
     <meta property="og:image" content="img/htmlcss.png" />
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="icon" type="text/css" href="img/interior.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -34,6 +35,7 @@
             <li class="nav-li"><a href="visual.html">About</a></li>
             <li class="nav-li"><a href="design.html">Designs</a></li>
             <li class="nav-li active-li"><a href="contact.html">Contact</a></li>
+            <li class="nav-li"><a href="api.html">Posts</a></li>
           </ul>
         </nav>
         <i id="burger-menu" class="fa-solid fa-bars burger"></i>
