--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GITA-JS</title>
-    <meta name="description" content="Free Web Task" />
+    <meta name="description" content="Gita Web Task" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Laka Nodia" />
     <meta property="og:url" content="img/htmlcss.png" />
@@ -13,6 +13,7 @@
     <meta property="og:title" content="GITA-JS" />
     <meta property="og:description" content="GITA-JS Project" />
     <meta property="og:image" content="img/htmlcss.png" />
+    <link rel="icon" type="text/css" href="img/interior.png" />
     <link rel="stylesheet" href="css/global.css" />
     <link
       rel="stylesheet"
@@ -34,10 +35,11 @@
             <li class="nav-li"><a href="visual.html">About</a></li>
             <li class="nav-li"><a href="design.html">Designs</a></li>
             <li class="nav-li"><a href="contact.html">Contact</a></li>
+            <li class="nav-li"><a href="api.html">Posts</a></li>
           </ul>
         </nav>
         <i id="burger-menu" class="fa-solid fa-bars burger"></i>
-       </div>
+      </div>
     </header>
 
     <section id="section1">
