--- a/visual.html
+++ b/visual.html
@@ -13,6 +13,7 @@
     <meta property="og:title" content="GITA-JS"/>
     <meta property="og:description" content="GITA-JS Project"/>
     <meta property="og:image" content="img/htmlcss.png"/>
+    <link rel="icon" type="text/css" href="img/interior.png" />
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
@@ -31,6 +32,7 @@
               <li class="nav-li active-li"><a href="visual.html">About</a></li>
               <li class="nav-li"><a href="design.html">Designs</a></li>
               <li class="nav-li"><a href="contact.html">Contact</a></li>
+              <li class="nav-li"><a href="api.html">Posts</a></li>
             </ul>
           </nav>
           <i id="burger-menu" class="fa-solid fa-bars burger"></i>
