--- a/api.html
+++ b/api.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Free Web Task" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Laka Nodia" />
-    <meta property="og:url" content="img/htmlcss.png" />
+    <meta property="og:url" content="img/interior2.png" />
     <meta property="og:type" content="GITA-JS Project" />
     <meta property="og:title" content="GITA-JS" />
     <meta property="og:description" content="GITA-JS Project" />
-    <meta property="og:image" content="img/htmlcss.png" />
+    <meta property="og:image" content="img/interior2.png" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="icon" type="text/css" href="img/interior.png" />
     <link
