--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <header class="header-block">
@@ -46,14 +47,14 @@
       <div class="banner-img-div">
         <div class="banner-text-div">
           <h1 class="banner-main-title">Interior Renovation</h1>
+          <a class="banner-button-link" href="visual.html"
+            ><button class="banner-button" id="button">Learn More</button></a
+          >
           <h2 class="banner-title">
             ​Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident.
           </h2>
-          <a href="index.html"
-            ><button class="banner-button">Learn More</button></a
-          >
         </div>
       </div>
     </section>
@@ -110,13 +111,13 @@
         <div class="decoration-div">
           <h2 class="decor-title">​Decorating Ideas</h2>
           <h3 class="decor-title2">Images from Freepik</h3>
-          <p class="decor-text">
+          <button class="decor-button" id="button">Learn More</button>
+          <p class="decor-text hide">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc
             justo sagittis suscipit ultrices. Excepteur sint occaecat cupidatat
             non proident, sunt in culpa qui officia deserunt mollit anim id est
             laborum.
           </p>
-          <button class="decor-button">Learn More</button>
         </div>
         <img class="decor-img1" src="img/decor1.jpg" alt="decor-img" />
         <img class="decor-img3" src="img/decor3.jpg" alt="decor-img" />
